Bugfix Java 1.8 support.